fixing spacing issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1836,7 +1836,7 @@ hr.not-visible{
 	}
 
 	#landingText 	{
-		margin-top:-130px;
+		margin-top:-50px;
 	}
 
 	#consultation-btn {
